# picolab

./: .gitignore  CMakeLists.txt  bmp280.c  bmp280.h  commands.c  commands.h  main.c  pins.h  scpi_parsing.c  scpi_parsing.h
HW/picolab/picolab/: fp-info-cache-nt202  fp-lib-table  picolab-nt202.kicad_pcb  picolab-nt202.kicad_prl  picolab-nt202.kicad_sch  picolab-nt202.kicad_sym  picolab.bak  picolab.kicad_pcb  picolab.kicad_prl  picolab.kicad_pro  picolab.kicad_sch  picolab.kicad_sym  sym-lib-table
HW/picolab/picolab/picolab.pretty/: BMP280_breakout.kicad_mod
